--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,11 +33,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="南京" />
+                    android:text="Nanjing" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="晴 空气质量优" />
+                    android:text="Sunny to Cloudy " />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
-                android:text="搜索或输入网址"
+                android:text="@string/click_to_search"
                 android:textColor="@color/grey"
                 android:background="@drawable/btn_input"/>
         </LinearLayout>
