--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -5,12 +5,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="250dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="15dp">
+            android:layout_marginLeft="20dp">
             <TextView
                 android:id="@+id/news_text_head"
                 android:layout_width="match_parent"
@@ -27,16 +28,18 @@
                 android:textColor="@color/grey"/>
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginRight="20dp">
 
             <ImageView
                 android:id="@+id/news_photo"
                 android:layout_width="90dp"
                 android:layout_height="50dp"
+                android:layout_alignParentRight="true"
                 android:scaleType="center" />
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
