--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="opace_white">#50FFFFFF</color>
     <color name="grey">#AAAAAA</color>
     <color name="light_grey">#C7C6C6</color>
     <color name="yello">#FFDE00</color>
