--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,9 +46,9 @@
                 android:gravity="right">
                 <ImageButton
                     android:id="@+id/add_news_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/add_btn"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/btn_add"
                     android:background="@color/white"
                     android:layout_marginRight="25dp"/>
             </LinearLayout>
