--- a/app/src/main/res/drawable/btn_submit.xml
+++ b/app/src/main/res/drawable/btn_submit.xml
@@ -2,9 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="3px" android:color="@color/black" />
             <corners android:radius="15dp" />
-            <solid android:color="@color/white" />
+            <solid android:color="@color/green" />
         </shape>
     </item>
 </selector>
