--- a/app/src/main/res/layout/weather_daily_item.xml
+++ b/app/src/main/res/layout/weather_daily_item.xml
@@ -5,12 +5,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp">
         <ImageView
             android:id="@+id/weather_daily_weather"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:scaleType="center"
+            android:layout_marginLeft="10dp"
             android:src="@drawable/weather_cloudy" />
         <TextView
             android:id="@+id/weather_daily_date"
@@ -18,14 +20,14 @@
             android:layout_height="wrap_content"
             android:text="today"
             android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:padding="15dp"/>
         <TextView
             android:id="@+id/weather_daily_temp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="15℃~18℃"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textColor="@color/white"
             android:gravity="end"
             android:padding="15dp"/>
