fix display font size

--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -30,6 +30,7 @@
         </LinearLayout>
 
         <RelativeLayout
+            android:id="@+id/news_photo_wrap"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="20dp">
