--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -10,22 +10,23 @@
         android:padding="10dp">
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="250dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp">
             <TextView
                 android:id="@+id/news_text_head"
                 android:layout_width="match_parent"
+                android:maxWidth="250dp"
                 android:layout_height="wrap_content"
                 android:text="This is TEST"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textColor="@color/black" />
             <TextView
                 android:id="@+id/news_text_author"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="author"
-                android:textSize="15sp"
+                android:textSize="10sp"
                 android:textColor="@color/grey"/>
         </LinearLayout>
 
