--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -17,6 +17,7 @@
             android:background="@drawable/baseline_arrow_back_ios_24"
             android:backgroundTint="@color/black" />
         <TextView
+            android:id="@+id/news_detail_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="this is the news title"
@@ -24,12 +25,14 @@
             android:textSize="20sp"
             android:layout_marginTop="10dp"/>
         <TextView
+            android:id="@+id/news_detail_author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="author"
             android:textSize="15sp"
             android:layout_marginTop="10dp" />
         <TextView
+            android:id="@+id/news_detail_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="this is the content lalalallalalallallllllllll"
